# MobileGL

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PlannedFunctions.md  README.md  SOURCE_AUDIT.md  android_ci_build.bash  build.gradle  selfcheck.c  update.bash
.github/workflows/: UpdateSubmodules.yml  benchmark.yml  build.yml  dry-run.yaml  dry-run.yml  main.yml  plugin-apk.yml  test.yml
MG/: Constants.h  Global.h  Includes.h  Init.cpp
MG/MG_GL/BackendLoader/GLES/: Loader.cpp  Loader.h
MG/MG_GL/EGL/: EGL_EMU.cpp  EGL_EMU.h
MG/MG_GL/EGL/GLES/: EGL_WRAP.cpp  EGL_WRAP.h
MG/MG_GL/EGL/VK/: EGL_EMU.cpp  EGL_EMU.h
MG/MG_GL/GL/Buffer/: GL_Buffer.cpp  GL_Buffer.h
MG/MG_GL/GL/Command/: GL_Command.cpp  GL_Command.h
MG/MG_GL/GL/Common/: GL_Common.cpp  GL_Common.h
MG/MG_GL/GL/Drawing/: GL_Drawing.h
MG/MG_GL/GL/Getter/: BackendInfo.cpp  GL_Getter.cpp  GL_Getter.h
MG/MG_GL/GL/Program/: GL_Program.cpp  GL_Program.h
MG/MG_GL/GL/Shader/: GL_Shader.cpp  GL_Shader.h
MG/MG_GL/GL/Texture/: GL_Texture.cpp  GL_Texture.h
MG/MG_GL/GL/VertexArray/: GL_VertexArray.cpp  GL_VertexArray.h
MG/MG_GL/GL_Def/: GL_Def.cpp
MG/MG_GL/State/Buffer/: BufferState.cpp  BufferState.h
MG/MG_GL/State/Common/: CommonState.cpp  CommonState.h
MG/MG_GL/State/Core/: GLState.cpp  GLState.h
MG/MG_GL/State/Framebuffer/: FramebufferState.cpp  FramebufferState.h
MG/MG_GL/State/Program/: ProgramState.cpp  ProgramState.h  ShaderObject.cpp  ShaderObject.h
MG/MG_GL/State/Texture/: TextureState.cpp  TextureState.h
MG/MG_GL/State/VertexArray/: VertexArrayState.cpp  VertexArrayState.h
MG/MG_Include/: IndexGenerator.hpp  UncertainBool.hpp
MG/MG_RHI/GLES/: RHI.cpp  RHI.h
MG/MG_RHI/GLES/Test/: TestDrawing.cpp  TestDrawing.h
MG/MG_UTIL/Debug/: Debug.cpp  Debug.h
MG/MG_UTIL/Program/: DebugTool.cpp  DebugTool.h  GLSLTool.cpp  GLSLTool.h
MobileGL/: Config.h  ConfigLoader.cpp  Defines.h  GlobalObjects.cpp  Includes.h  Init.cpp  Init.h  mgl-version.script
MobileGL/MG_Backend/: BackendObject.cpp  BackendObject.h  BackendObjects.h  Backends.h  Init.cpp
MobileGL/MG_Backend/DirectGLES/: BackendObject_DirectGLES.cpp  BackendObject_DirectGLES.h  DirectGLES.cpp  DirectGLES.h  Managers.cpp  Managers.h  Utils.cpp  Utils.h  multidraw.cpp  multidraw.h
MobileGL/MG_Backend/DirectGLES/mobileglues/: DSAWrapper.h  MultiBindWrapper.cpp  MultiBindWrapper.h
MobileGL/MG_Backend/DirectVulkan/: BackendObject_DirectVulkan.cpp  BackendObject_DirectVulkan.h  DirectVulkan.cpp  DirectVulkan.h  DirectVulkanResourceState.h  TmpImpl.cpp  TmpImpl.h  VkIncludes.h  VmaImpl.cpp  VulkanRendererConfig.h
MobileGL/MG_Backend/DirectVulkan/Managers/: ProgramManager.cpp  ProgramManager.h  RenderStateManager.cpp  RenderStateManager.h  VertexInputStateManager.cpp  VertexInputStateManager.h
MobileGL/MG_Backend/DirectVulkan/Renderer/: BufferArena.cpp  BufferArena.h  BufferSlice.h  FrameContext.cpp  FrameContext.h  PipelineFactory.cpp  PipelineFactory.h  PipelineManager.cpp  PipelineManager.h  ProgramFactory.cpp  ProgramFactory.h  SwapchainManager.cpp  SwapchainManager.h  SwapchainObject.cpp  SwapchainObject.h  UniformDescriptorBinder.cpp  UniformDescriptorBinder.h  UniformManager.cpp  UniformManager.h  VertexInputStateBuilder.cpp  VertexInputStateBuilder.h  VertexInputStateFactory.cpp  VertexInputStateFactory.h  VkBufferManager.cpp  VkBufferManager.h  VkBufferObject.cpp  VkBufferObject.h  VkClearManager.cpp  VkClearManager.h  VkCommon.h  VkFramebufferManager.cpp  VkFramebufferManager.h  VkRenderPassManager.cpp  VkRenderPassManager.h  VkRenderTargetManager.cpp  VkRenderTargetManager.h  VkSamplerManager.cpp  VkSamplerManager.h  VkTextureManager.cpp  VkTextureManager.h  (+6 more)
MobileGL/MG_Benchmark/: CMakeLists.txt  SanityBench.cpp
MobileGL/MG_Benchmark/Buffer/: BufferBench.cpp  CMakeLists.txt
MobileGL/MG_Benchmark/Program/: CMakeLists.txt  ProgramBench.cpp
MobileGL/MG_Impl/: GetProcAddress.cpp  GetProcAddress.h  Init.cpp  Init.h
MobileGL/MG_Impl/EGLImpl/: EGLImpl.cpp  EGLImpl.h
MobileGL/MG_Impl/EGLImpl/EGLForVulkan/: EGLForVulkan.cpp  EGLForVulkan.h
MobileGL/MG_State/EGLState/: Core.cpp  Core.h
MobileGL/MG_State/GLState/: Core.cpp  Core.h
MobileGL/MG_Test/: CMakeLists.txt  SanityTest.cpp  test.sh
MobileGL/MG_Test/Backend/DirectVulkan/: CMakeLists.txt  SanityTest.cpp  TestExec.cpp
MobileGL/MG_Test/Buffer/: BufferTest.cpp  CMakeLists.txt
MobileGL/MG_Test/Framebuffer/: CMakeLists.txt  FramebufferTest.cpp
MobileGL/MG_Test/Program/: CMakeLists.txt  ProgramTest.cpp  ProgramUtilTest.cpp
MobileGL/MG_Test/Texture/: CMakeLists.txt  TextureTest.cpp  VkClearManagerTest.cpp
MobileGL/MG_Test/VertexArray/: CMakeLists.txt  VertexArrayTest.cpp
MobileGL/MG_Util/: GLExtensions.h  PlatformStubs.h  Types.h
MobileGL/MG_Util/Classifiers/: TextureEnumClassifier.cpp  TextureEnumClassifier.h
MobileGL/MG_Util/Config/: EnvChecker.h  cJSON.c  config.cpp  config.h  settings.cpp  settings.h
MobileGL/MG_Util/Debug/: Log.cpp  Log.h
MobileGL/MG_Util/Math/: VectorTypes.cpp  VectorTypes.h
MobileGL/MG_Util/Metrics/: BufferMetrics.cpp  BufferMetrics.h  TextureMetrics.cpp  TextureMetrics.h
MobileGL/MG_Util/Miscellany/: IndexGenerator.h  MGLGitHash.h.in
MobileGL/MG_Util/Pipelines/: Pipeline.hpp  PipelineExecutor.hpp  ProgramLinkingPipeline.cpp  ProgramLinkingPipeline.h  ShaderCompilationPipeline.cpp  ShaderCompilationPipeline.h  Types.h
MobileGL/MG_Util/ShaderTranspiler/: ShaderCompiler.cpp  ShaderCompiler.h  ShaderSourceProcessor.cpp  ShaderSourceProcessor.h  ShaderSourceProcessor_inline.h  SpvcSession.cpp  SpvcSession.h  Types.h
MobileGL/MG_Util/Texture/: PixelStoreProcessor.cpp  PixelStoreProcessor.h  TextureFormatProcessor.cpp  TextureFormatProcessor.h
android-plugin/: build.gradle  settings.gradle
android-plugin/app/: build.gradle
buildsystem/cmake/: FindSPIRVCross.cmake  FindSPIRVTools.cmake  Findglslang.cmake
include/GL/: gl.h
include/SPIRV/: doc.cpp
include/ankerl/: unordered_dense.h
include/jemalloc/: jemalloc.h
scripts/: format_code.sh  update-source-file-header.py
(+209 files in other folders)
